v1.2.0: Gradle support + Java-25 frontier hardening
- Add section G: full Gradle (build.gradle/.kts) track — toolchain edit,
  wrapper floors (17>=7.3, 21>=8.5, 25>=9.0), Lombok floors, OpenRewrite via
  rewrite-gradle init-script, Kotlin JVM-target alignment.
- Section 7: Java-25 sun.misc.Unsafe deprecation — a version bump may not fix
  it (jctools 4.0.5 still calls it); switch to an Unsafe-free code path
  (jctools atomic queues). Lombok 1.18.40+ for JDK 25 (TypeTag::UNKNOWN).
- Section G notes: toolchain != build floor (ANTLR can need a higher JDK than
  the declared target); Gradle 8.x cannot run a JDK-25 toolchain (needs >=9).
- plugin/marketplace/README: Maven or Gradle; +gradle,+kotlin keywords.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>